@@ -10,11 +10,11 @@ use PerlACE::TestTarget;
 
 $status = 0;
 
-$port = PerlACE::random_port();
 $synchbase = "ready";
 my $target1 = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
 my $target2 = PerlACE::TestTarget::create_target (2) || die "Create target 2 failed\n";
 my $host = $target1->HostName();
+my $port = $target1->RandomPort ();
 $synchfile = $target1->LocalFile ("$synchbase");
 
 my $SV = $target1->CreateProcess("server", "-p $port -o $synchfile");
